--- a/client/static/main.scss
+++ b/client/static/main.scss
@@ -1,23 +1,57 @@
+html {
+  box-sizing: border-box;
+}
+
+html *,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
-  background-color: blue;
+  background-color: silver;
+}
+
+header {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.5rem;
 }
 
 #app {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3rem;
+  padding-inline: 4rem;
 
   & > * {
-    border: 5px solid black;
+    border: 0.5rem solid white;
+    background-color: rgba(255 255 255 / 0.5);
+    border-radius: 2rem;
     padding: 3rem;
   }
 
-  & * {
-    *:first-child {
-      margin-top: 0;
-    }
+  // & * {
+  //   *:first-child {
+  //     margin-top: 0;
+  //   }
 
-    *:last-child {
-      margin-bottom: 0;
-    }
+  //   *:last-child {
+  //     margin-bottom: 0;
+  //   }
+  // }
+}
+
+section {
+  background-color: rgba(255 255 255 / 0.75);
+  height: 100%;
+  padding: 1em;
+  border-radius: 1em;
+
+  h1 {
+    margin-top: 0;
+    font-size: 2rem;
+    font-family: 'Courier New', Courier, monospace;
   }
 }
